# coinjar

./: .gitignore  Cargo.toml  README.md  journal.coin  justfile
example/: fail_inbalanced.coin  multi_currencies.coin  simple.coin  two_txns.coin
share/: grammar.pest
src/: accn.rs  fmt_table.rs  journal.rs  main.rs  parser.rs  repl.rs  transaction.rs  util.rs  valuable.rs
src/accn/: entry.rs  query.rs
src/journal/: entry.rs  extension.rs  parser.rs  query.rs  register.rs
src/journal/extension/: fuzzy_accn.rs  relative_date.rs  split.rs
src/parser/: coin.pest
src/repl/: date.rs  split.rs  util.rs
src/tests/: mod.rs
src/transaction/: entry.rs
src/valuable/: conversion.rs
test/: example.coin
