[package]
name = "coinjar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12.0"
indenter = "0.3"
paste = "1"
pest = { version = "2" }
pest_derive = "2"
tabled = "0"
colored = "2"
clap = { version = "4.4.13", features = ["derive"] }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
