[package]
name = "coinjar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
pest = "2.7.6"
pest_derive = "2.7.6"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
uuid = { version = "1.7.0", features = ["v4"] }
