[package]
name = "coinjar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
indenter = "0.3.3"
inquire = "0.6.2"
itertools = "0.12.0"
pest = "2.7.6"
pest_derive = "2.7.6"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
rustyline = "13.0.0"
uuid = { version = "1.7.0", features = ["v4"] }
